Fix popup preview not being clipped

--- a/packages/metastream-app/src/components/Popup.css
+++ b/packages/metastream-app/src/components/Popup.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: black;
+  clip-path: inset(0 0); /* overflow: hidden not working for some reason */
 }
 
 .background {
